--- a/MobileApplication/app/src/main/res/menu/main.xml
+++ b/MobileApplication/app/src/main/res/menu/main.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_sing_out"
+        android:id="@+id/action_logout"
         android:orderInCategory="100"
-        android:title="@string/action_sing_out"
+        android:title="@string/action_logout"
         app:showAsAction="never" />
 </menu>
