--- a/MobileApplication/app/src/main/res/layout/fragment_search_modules.xml
+++ b/MobileApplication/app/src/main/res/layout/fragment_search_modules.xml
@@ -6,6 +6,37 @@
     tools:context="pl.polsl.mateusz.chudy.mobileapplication.view.fragments.SearchModulesFragment">
 
     <android.support.constraint.ConstraintLayout
+        android:id="@+id/search_modules_progress_constraint_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ProgressBar
+            android:id="@+id/search_modules_progress"
+            style="@style/Widget.AppCompat.ProgressBar"
+            android:layout_width="130dp"
+            android:layout_height="130dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:indeterminate="false"
+            android:max="100"
+            android:minHeight="50dp"
+            android:minWidth="200dp"
+            android:progress="1"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.427" />
+
+    </android.support.constraint.ConstraintLayout>
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/search_modules_constraint_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
