--- a/MobileApplication/app/src/main/res/layout/activity_login.xml
+++ b/MobileApplication/app/src/main/res/layout/activity_login.xml
@@ -5,8 +5,6 @@
     android:layout_height="match_parent"
     tools:context="pl.polsl.mateusz.chudy.mobileapplication.view.fragments.UserManipulationFragment">
 
-    <!-- Login progress -->
-
     <android.support.constraint.ConstraintLayout
         android:id="@+id/login_progress_constraint_layout"
         android:layout_width="match_parent"
@@ -34,7 +32,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.427" />
-
     </android.support.constraint.ConstraintLayout>
 
     <android.support.constraint.ConstraintLayout
@@ -42,18 +39,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
         <android.support.design.widget.TextInputLayout
             android:id="@+id/login_server_ip_text_input_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="76dp"
+            android:layout_marginTop="36dp"
             android:gravity="bottom|center"
             app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteX="0dp">
+            tools:layout_editor_absoluteX="16dp">
 
             <EditText
-                android:id="@+id/login_server_ip_username_edit_text"
+                android:id="@+id/login_server_ip_edit_text"
                 android:layout_width="308dp"
                 android:layout_height="45dp"
                 android:layout_marginEnd="8dp"
@@ -65,14 +61,35 @@
 
         </android.support.design.widget.TextInputLayout>
 
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/login_server_port_text_input_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:gravity="bottom|center"
+            app:layout_constraintTop_toBottomOf="@+id/login_server_ip_text_input_layout"
+            tools:layout_editor_absoluteX="0dp">
+
+            <EditText
+                android:id="@+id/login_server_port_edit_text"
+                android:layout_width="308dp"
+                android:layout_height="45dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:hint="@string/prompt_server_port"
+                android:inputType="number"
+                android:maxLines="1"
+                android:singleLine="true" />
+
+        </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/login_username_text_input_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="156dp"
+            android:layout_marginTop="20dp"
             android:gravity="bottom|center"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/login_server_port_text_input_layout"
             tools:layout_editor_absoluteX="0dp">
 
             <EditText
@@ -92,7 +109,7 @@
             android:id="@+id/login_pass_text_input_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="20dp"
             android:gravity="bottom|center"
             app:layout_constraintTop_toBottomOf="@+id/login_username_text_input_layout"
             tools:layout_editor_absoluteX="0dp">
