--- a/MobileApplication/app/src/main/res/layout/activity_login.xml
+++ b/MobileApplication/app/src/main/res/layout/activity_login.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="pl.polsl.mateusz.chudy.mobileapplication.view.fragments.UserManipulationFragment">
+    tools:context="pl.polsl.mateusz.chudy.mobileapplication.view.activities.LoginActivity">
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/login_progress_constraint_layout"
@@ -115,7 +115,7 @@
             tools:layout_editor_absoluteX="0dp">
 
             <EditText
-                android:id="@+id/user_manipulation_pass_edit_text"
+                android:id="@+id/login_pass_edit_text"
                 android:layout_width="308dp"
                 android:layout_height="45dp"
                 android:layout_marginEnd="8dp"
@@ -135,12 +135,26 @@
             android:id="@+id/login_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
             android:text="@string/action_login"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/login_register_button"
+            app:layout_constraintHorizontal_bias="0.645"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/login_pass_text_input_layout"
-            app:layout_constraintVertical_bias="0.418" />
+            app:layout_constraintVertical_bias="0.411" />
+
+        <Button
+            android:id="@+id/login_register_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="76dp"
+            android:text="@string/action_register"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/login_pass_text_input_layout"
+            app:layout_constraintVertical_bias="0.411" />
 
 
     </android.support.constraint.ConstraintLayout>
