--- a/MobileApplication/app/src/main/res/layout/fragment_room_manipulation.xml
+++ b/MobileApplication/app/src/main/res/layout/fragment_room_manipulation.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="pl.polsl.mateusz.chudy.mobileapplication.view.fragments.RoomManipulationFragment">
+    tools:context="pl.polsl.mateusz.chudy.mobileapplication.controllers.fragments.RoomManipulationFragment">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
